Improving management of runtime exception.